lib/src/extraction/snapshots/gql_safeguard_lib__extraction__graphql_parser__tests__parse_edge_case_fixtures_to_ast.snap
---
source: lib/src/extraction/graphql_parser.rs
expression: result
---
File: fixtures/edge_cases/additional-queries.ts
GraphQL AST items: 1

=== AST Item 1 ===
Type: Query
Name: AdditionalQueryEdgeCase
File: fixtures/edge_cases/additional-queries.ts
Directives: 0
Fields: 1
  - user
Fragment Spreads: 0

---

File: fixtures/edge_cases/additional-queries.ts
GraphQL AST items: 1

=== AST Item 1 ===
Type: Query
Name: GraphQLQuery
File: fixtures/edge_cases/additional-queries.ts
Directives: 1
  - Catch 🧤
Fields: 1
  - user
Fragment Spreads: 0

---

File: fixtures/edge_cases/circular_fragments.ts
GraphQL AST items: 1

=== AST Item 1 ===
Type: Fragment
Name: FragmentACircular
File: fixtures/edge_cases/circular_fragments.ts
Directives: 0
Fields: 2
  - id
  - name
Fragment Spreads: 1
  - FragmentBCircular

---

File: fixtures/edge_cases/circular_fragments.ts
GraphQL AST items: 1

=== AST Item 1 ===
Type: Fragment
Name: FragmentBCircular
File: fixtures/edge_cases/circular_fragments.ts
Directives: 0
Fields: 2
  - email
  - bio
Fragment Spreads: 1
  - FragmentACircular

---

File: fixtures/edge_cases/circular_fragments.ts
GraphQL AST items: 1

=== AST Item 1 ===
Type: Query
Name: CircularQueryTest
File: fixtures/edge_cases/circular_fragments.ts
Directives: 0
Fields: 1
  - user
Fragment Spreads: 1
  - FragmentACircular

---

File: fixtures/edge_cases/commented_graphql.ts
GraphQL AST items: 1

=== AST Item 1 ===
Type: Query
Name: ValidQueryCommented
File: fixtures/edge_cases/commented_graphql.ts
Directives: 1
  - Catch 🧤
Fields: 1
  - user
Fragment Spreads: 0

---

File: fixtures/edge_cases/dynamic_imports.tsx
GraphQL AST items: 1

=== AST Item 1 ===
Type: Query
Name: BaseQueryDynamic
File: fixtures/edge_cases/dynamic_imports.tsx
Directives: 1
  - Catch 🧤
Fields: 1
  - user
Fragment Spreads: 0

---

File: fixtures/edge_cases/dynamic_imports.tsx
GraphQL AST items: 1

=== AST Item 1 ===
Type: Query
Name: StaticDynamicQueryEdge
File: fixtures/edge_cases/dynamic_imports.tsx
Directives: 0
Fields: 1
  - user
Fragment Spreads: 0
